RESOLVED FIXED237038
[CSS Container Queries] getComputedStyle should update style for invalid query containers
https://bugs.webkit.org/show_bug.cgi?id=237038
Summary [CSS Container Queries] getComputedStyle should update style for invalid quer...
Antti Koivisto
Reported 2022-02-22 07:22:36 PST
Containers may affect descendant style
Attachments
Patch (9.19 KB, patch)
2022-02-22 07:28 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-02-22 07:28:40 PST
EWS
Comment 2 2022-02-22 11:04:02 PST
Committed r290320 (247642@main): <https://commits.webkit.org/247642@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452871 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-22 11:05:17 PST
Note You need to log in before you can comment on or make changes to this bug.