[CSS container Queries] getComputedStyle should update style for invalid query containers https://bugs.webkit.org/show_bug.cgi?id=237038

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-contain/container-queries/animation-container-size-expected.txt:
* web-platform-tests/css/css-contain/container-queries/animation-container-type-dynamic-expected.txt:
* web-platform-tests/css/css-contain/container-queries/animation-nested-animation-expected.txt:
* web-platform-tests/css/css-contain/container-queries/animation-nested-transition-expected.txt:
* web-platform-tests/css/css-contain/container-queries/aspect-ratio-feature-evaluation-expected.txt:
* web-platform-tests/css/css-contain/container-queries/backdrop-invalidation-expected.txt:
* web-platform-tests/css/css-contain/container-queries/pseudo-elements-001-expected.txt:

Source/WebCore:

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::hasValidStyleForProperty):

We always need to update style inside a query container since a change to it may affect descendants.



Canonical link: https://commits.webkit.org/247642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290320 268f45cc-cd09-0410-ab3c-d52691b4dbfc